# reproducible-segfault-rpath

./: default.nix  project.nix  shell.nix
a/: a.cabal
a/src/: A.hs
a/src-bin/: main.hs
